Changing terminal output for redis Subscriber